# fluxshare

./: .gitignore  LICENSE  LLM_SPEC.md  README.md  apply_codex.sh  package.json  pnpm-lock.yaml
apps/client/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/client/src/: App.tsx  index.tsx  styles.css  vite-env.d.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src-tauri/src/commands/: files.rs  quic.rs  settings.rs  transfer.rs  tunnel.rs  webrtc.rs
apps/client/src/app/components/: FilePicker.tsx  PeerList.tsx  ProgressBar.tsx  SpeedMeter.tsx
apps/client/src/app/lib/: api.ts  webrtcClient.ts
apps/client/src/app/routes/: Logs.tsx  Peers.tsx  Receive.tsx  Send.tsx  Settings.tsx  Tunnel.tsx
apps/client/src/components/: AppShell.tsx  PeersPanel.tsx  SessionPanel.tsx  ThemeProvider.tsx  ToastViewport.tsx  TransferBox.tsx
apps/client/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
apps/client/src/i18n/: LanguageProvider.tsx  translate.ts
apps/client/src/lib/: notify.ts  signaling.ts  update.ts
apps/client/src/lib/file/: selectFile.ts
apps/client/src/lib/persist/: indexeddb.ts  tauri.ts
apps/client/src/lib/rtc/: PeerManager.ts
apps/client/src/lib/transfer/: TransferService.ts  folder.ts  route.ts  selectFile.ts
apps/client/src/lib/webrtc/: PeerManager.ts  transfer.ts
apps/client/src/locales/: en.json  pt.json
apps/client/src/pages/: Admin.tsx  Config.tsx  Home.tsx  Room.tsx  RoomLanding.tsx  Send.tsx  Tunnel.tsx
apps/client/src/state/: usePreferencesStore.ts  useRoomStore.ts  useTunnelStore.ts  useUpdateStore.ts
apps/client/src/store/: usePeers.ts  useToast.ts  useTransfers.ts
apps/client/src/styles/: theme.css  tokens.css
apps/client/src/types/: protocol.ts  tunnel.ts
apps/client/src/utils/: env.ts  nanoid.ts
apps/client/src/workers/: fileReader.worker.ts
apps/signaling-server/: .env.example  package.json  tsconfig.json
apps/signaling-server/src/: index.test.ts  index.ts  lib.rs  main.rs  server.ts
apps/signaling-server/src/commands/: transfer.rs
