[package]
name = "fluxshare"
version = "0.1.0"
edition = "2021"
description = "FluxShare Tauri backend"
authors = ["FluxShare Team"]
license = "MIT"

[lib]
name = "fluxshare_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
blake3 = "1"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "1.5", features = ["shell-open", "process-command-api", "dialog-open", "updater"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
webrtc = "0.10"
quinn = { version = "0.10", features = ["rustls"] }
url = "2"
rand = "0.8"
parking_lot = "0.12"
dirs = "5"

[dev-dependencies]
rand = "0.8"
tempfile = "3"
