[package]
name = "fluxshare"
version = "0.1.0"
edition = "2021"
description = "FluxShare Tauri backend"
authors = ["FluxShare Team"]
license = "MIT"

[lib]
name = "fluxshare_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
http-body-util = "0.1"
blake3 = "1"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
dirs = "5"
fs_extra = "1"
html-escape = "0.2"
percent-encoding = "2"
parking_lot = "0.12"
quinn = { version = "0.10", features = ["rustls"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "1.5", features = ["api-all", "process-command-api"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
url = "2"
webrtc = "0.10"
which = "4"
# opcional: só se realmente usar
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }


[dev-dependencies]
rand = "0.8"
tempfile = "3"

